--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 #main div
 {
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     position: absolute;
-	
+	border: solid 1px;
 }
 
 #main div.die
@@ -17,7 +17,7 @@
 }
 
 #main {
-    position: relative;;
+    position: relative;
     left: 0;
     top: 0;
 }
